# modal-dictation-exploration

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Package.resolved  Package.swift  README.md  flake.nix  pyproject.toml
Sources/ModalDictation/: main.swift
Sources/ModalDictationCore/Audio/: AudioCaptureEngine.swift  AudioDeviceManager.swift  AudioProtocols.swift
Sources/ModalDictationCore/Commands/: CommandMatcher.swift  FuzzyMatcher.swift  MatchedCommand.swift  NumberParser.swift  PhraseTrie.swift  StringDistance.swift
Sources/ModalDictationCore/Config/: AppConfig.swift  CommandsConfig.swift  ConfigReader.swift  ConfigWatcher.swift  HotkeyConfig.swift
Sources/ModalDictationCore/Input/: HotkeyListener.swift  HotkeyProtocols.swift  KeyCodeMap.swift  KeyEventPoster.swift  KeystrokeEmitter.swift  KeystrokeEmitterProtocols.swift  ModifierMap.swift  TextInserter.swift  TextInserterProtocols.swift
Sources/ModalDictationCore/Mode/: CommandSession.swift  DictationSession.swift  Mode.swift  ModeEvent.swift  ModeStateMachine.swift  ModeTransition.swift  SessionEvent.swift  SessionRunner.swift  VoiceTriggerMatcher.swift
Sources/ModalDictationCore/Permissions/: PermissionsManager.swift  PermissionsProtocols.swift
Sources/ModalDictationCore/Resources/: default-config.toml
Sources/ModalDictationCore/Speech/: CommandRecognizer.swift  DictationRecognizer.swift  FluidAudio+Conformances.swift  HybridRecognizer.swift  ModelStore.swift  Protocols.swift  SpeechProtocols.swift  SpeechRecognizer.swift  VocabularyBuilder.swift
Tests/ModalDictationTests/: AudioEngineTests.swift  CommandMatcherTests.swift  CommandSessionTests.swift  ConfigReaderTests.swift  DictationSessionTests.swift  HotkeyListenerTests.swift  KeystrokeEmitterTests.swift  ModeStateMachineTests.swift  PermissionsManagerTests.swift  SessionRunnerTests.swift  SpeechTests.swift  TextInserterTests.swift  VoiceTriggerMatcherTests.swift
Tests/ModalDictationTests/Fixtures/: ConfigFixtures.swift  SessionFixtures.swift  SpeechFixtures.swift
Tests/ModalDictationTests/Helpers/: AsyncHelpers.swift
docs/: PRODUCT_REQUIREMENTS.md  TECHNICAL_DECISIONS.md  TECHNOLOGY_SELECTION.md
examples/waybar/: modal-config.jsonc  style.css
scripts/: modal_status.py
src/: config.rs  main.rs
src/activation/: mod.rs
src/config/: manager.rs  mod.rs
src/modal_dictation/: __init__.py  app.py
src/modal_dictation_exploration/: __init__.py  audio.py  main.py  transcription.py  tray.py
src/modal_dictation_exploration/state/: __init__.py  app_state.py  async_behavior_subject.py
src/modal_dictation_exploration/types/: __init__.py  pulsectl.py  sounddevice.py
src/overlay/: backend.rs  defaults.rs  manager.rs  mod.rs  renderer.rs  state.rs  wayland.rs
src/overlay/tests/: helpers.rs  manager_tests.rs  mod.rs
src/overlay/wayland/: TESTING.md  error.rs  mock.rs  mod.rs  overlay.rs  position.rs  production.rs  production_tests.rs  protocol.rs  tests.rs
tests/: __init__.py  conftest.py  test_app.py  test_async_behavior_subject.py  test_audio.py  test_main.py  test_tray.py
tests/factories/: audio.py  pulsectl.py  sounddevice.py
tests/mocks/: pulsectl.py  pystray.py
typings/pulsectl/: __init__.pyi  pulsectl.pyi
typings/pystray/: __init__.pyi
typings/sounddevice/: __init__.pyi
