[package]
name = "phonesc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "signal", "fs", "time"] }
notify = "6.0"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging"] }
wayland-protocols-wlr = "0.3"
tiny-skia = "0.11"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "signal", "fs", "time", "test-util"] }
